LayoutTests:

Reviewed by Beth.

        Test for http://bugs.webkit.org/show_bug.cgi?id=10139
        <rdar://problem/4823028> REGRESSION: Reproducible crash when selecting a popup/button with ::selection pseudostyle

        * fast/css/pseudostyle-anonymous-text-expected.txt: Added.
        * fast/css/pseudostyle-anonymous-text.html: Added.

WebCore:

        Reviewed by Beth.

        Fix for  http://bugs.webkit.org/show_bug.cgi?id=10139
        <rdar://problem/4823028> REGRESSION: Reproducible crash when selecting a popup/button with ::selection pseudostyle

        Test: fast/css/pseudostyle-anonymous-text.html

        * rendering/RenderObject.cpp: (WebCore::RenderObject::getPseudoStyle): Nil check the node.



git-svn-id: svn://svn.chromium.org/blink/trunk@18915 bbb929c8-8fbe-4397-9dbb-9b2b20218538