third_party/WebKit/WebCore/rendering/RenderObject.cpp
@@ -2859,8 +2859,8 @@ RenderStyle* RenderObject::getPseudoStyle(RenderStyle::PseudoId pseudo, RenderSt
         return result;
 
     Node* node = element();
-    if (isText())
-        node = element()->parentNode();
+    if (node && isText())
+        node = node->parentNode();
     if (!node)
         return 0;
 
